--- a/Rudimentary_Antivirus/Rudimentary_Antivirus/App.xaml
+++ b/Rudimentary_Antivirus/Rudimentary_Antivirus/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Rudimentary_Antivirus"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoginWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
