--- a/Rudimentary_Antivirus/Rudimentary_Antivirus/LoginWindow.xaml
+++ b/Rudimentary_Antivirus/Rudimentary_Antivirus/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Rudimentary_Antivirus"
         mc:Ignorable="d"
-        Title="Bejelentkezés" Height="554" Width="408.8" WindowStartupLocation="CenterScreen">
+        Title="Bejelentkezés" Height="629" Width="408.8" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,279.6,-162">
         <Border Margin="10,10,-270.4,177" Background="AliceBlue" CornerRadius="20">
 
@@ -21,7 +21,9 @@
 
                 <Button x:Name="btn_Login" Content="Bejelentkezés" FontSize="15" Background="Gray" Foreground="White" Margin="60, 20" Height="35" Click="btn_Login_Click"/>
                 <Button x:Name="btn_Registration" Content="Regisztráció" FontSize="15" Background="Gray" Foreground="White" Margin="60, 0" Height="35" Click="btn_Registration_Click"/>
-                <Button x:Name="btn_Exit" Content="Kilépés" FontSize="15" Background="Gray" Foreground="White" Margin="60, 20" Height="35" Click="btn_Exit_Click"/>
+                <Button x:Name="btn_GuestLogin" Content="Folytatás vendégként" FontSize="15" Background="Gray" Foreground="White" Margin="60, 20" Height="35" Click="btn_GuestLogin_Click"/>
+                <Button x:Name="btn_Exit" Content="Kilépés" FontSize="15" Background="Gray" Foreground="White" Margin="60, 0" Height="35" Click="btn_Exit_Click"/>
+
             </StackPanel>
 
         </Border>
