--- a/Rudimentary_Antivirus/Rudimentary_Antivirus/MainWindow.xaml
+++ b/Rudimentary_Antivirus/Rudimentary_Antivirus/MainWindow.xaml
@@ -5,22 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Rudimentary_Antivirus"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="471.6" Width="800"
+        WindowStartupLocation="CenterScreen">
+    <Grid Margin="0,0,-0.4,-6">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="82*"/>
+            <ColumnDefinition Width="315*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- Welcome message -->
-        <TextBlock x:Name="lb_userName" Grid.Row="0" Margin="10" HorizontalAlignment="Right" TextAlignment="Right"
-                   Text="" FontSize="16" FontWeight="Bold"/>
+        <TextBlock x:Name="lb_userName" Grid.Row="0" Margin="0,10,10,9.6" HorizontalAlignment="Right" TextAlignment="Right"
+                   Text="" FontSize="16" FontWeight="Bold" Grid.Column="1"/>
 
         <!-- Main content -->
-        <ProgressBar HorizontalAlignment="Center" Height="28" Margin="0,17,0,0" VerticalAlignment="Top" Width="780" Grid.Row="1"/>
-        <TabControl Grid.Row="1" Margin="10,50,10,59" Name="tabControl">
+        <ProgressBar HorizontalAlignment="Center" Height="28" Margin="7,17.4,7,0" VerticalAlignment="Top" Width="780" Grid.Row="1" Grid.ColumnSpan="2"/>
+        <TabControl Grid.Row="1" Margin="10,50.2,9.6,64.8" Name="tabControl" SelectionChanged="tabControl_SelectionChanged" Grid.ColumnSpan="2">
             <TabItem Header="Tasks" Name="Tasks" Margin="2,-2,-2,0">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5" Margin="0,0,-0.2,0.8"/>
             </TabItem>
             <TabItem Header="Scanner" Name="Scanner" Margin="-2,0,-2,0">
                 <Grid Background="#FFE5E5E5">
@@ -28,5 +33,9 @@
             </TabItem>
         </TabControl>
 
+        <Button x:Name="btn_Scan" Content="Ellenőrzés" FontSize="15" Background="Gray" Foreground="White" Margin="10,340.4,26.2,17.4" Height="35" Grid.Row="1" Click="btn_Scan_Click"/>
+        <Button x:Name="btn_Task_Terminate" Content="Feladat befejezése" FontSize="15" Background="Gray" Foreground="White" Margin="10,340.4,10.2,17.4" Height="35" Grid.Row="1" Click="btn_Task_Terminate_Click"/>
+
+        <Button x:Name="btn_Exit" Content="Kilépés" FontSize="15" Background="Gray" Foreground="White" Margin="491.8,340.4,10,17.4" Height="35" Grid.Row="1" Grid.Column="1" Click="btn_Exit_Click"/>
     </Grid>
 </Window>
